--- a/home/index.html
+++ b/home/index.html
@@ -22,6 +22,14 @@
             text-align: center;
             width: auto;
         }
+        nav ul {
+                list-style: none;
+                display: flex;
+        }
+
+        nav ul li {
+                 margin-left: 20px;
+        }
         h1 {
             font-size: 3rem;
             color: #ffffff;
