--- a/home/index.html
+++ b/home/index.html
@@ -18,8 +18,9 @@
             height: 70px;
             color: white;
             display: flex;
+            justify-content: flex-end;
             align-items: center;
-            text-align: center;
+            text-align: right;
             width: auto;
         }
         nav ul {
