--- a/home/index.html
+++ b/home/index.html
@@ -130,17 +130,19 @@
 <body>
     <header class="header">
         <div class="text-center mt-4">
-            <ul class="nav justify-content-center">
-                <li class="nav-item">
-                    <a href="https://four.my.id/home" class="nav-link"><h4>Home</h4></a>
-                </li>
-                <li class="nav-item">
-                    <a href="https://four.my.id/store" class="nav-link"><h4>Store</h4></a>
-                </li>
-                <li class="nav-item">
-                    <a href="https://four.my.id/perks" class="nav-link"><h4>Perks</h4></a>
-                </li>
-            </ul>
+            <aside>
+                <ul class="nav justify-content-center">
+                    <li class="nav-item">
+                        <a href="https://four.my.id/home" class="nav-link"><h4>Home</h4></a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="https://four.my.id/store" class="nav-link"><h4>Store</h4></a>
+                    </li>
+                        <li class="nav-item">
+                        <a href="https://four.my.id/perks" class="nav-link"><h4>Perks</h4></a>
+                    </li>
+                </ul>
+            </aside>
             <hr>
         </div>
     </header>
