--- a/home/index.html
+++ b/home/index.html
@@ -15,7 +15,7 @@
             position: sticky;
             background-color: #808080;
             background-size: cover;
-            height: 70px;
+            height: 50px;
             color: white;
             display: flex;
             justify-content: flex-end;
@@ -133,13 +133,13 @@
             <aside>
                 <ul class="nav justify-content-center">
                     <li class="nav-item">
-                        <a href="https://four.my.id/home" class="nav-link"><h4>Home</h4></a>
+                        <a href="https://four.my.id/home" class="nav-link"><p>Home</p></a>
                     </li>
                     <li class="nav-item">
-                        <a href="https://four.my.id/store" class="nav-link"><h4>Store</h4></a>
+                        <a href="https://four.my.id/store" class="nav-link"><p>Store</p></a>
                     </li>
                         <li class="nav-item">
-                        <a href="https://four.my.id/perks" class="nav-link"><h4>Perks</h4></a>
+                        <a href="https://four.my.id/perks" class="nav-link"><p>Perks</p></a>
                     </li>
                 </ul>
             </aside>
