--- a/home/index.html
+++ b/home/index.html
@@ -13,7 +13,7 @@
         }
         .header {
             position: sticky;
-            background-color: #808080;
+            background-color: #0f0e0b;
             background-size: cover;
             height: 50px;
             color: white;
@@ -24,12 +24,12 @@
             width: auto;
         }
         nav ul {
-                list-style: none;
-                display: flex;
+             list-style: none;
+             display: flex;
         }
 
         nav ul li {
-                 margin-left: 20px;
+            margin-left: 20px;
         }
         h1 {
             font-size: 3rem;
