--- a/home/index.html
+++ b/home/index.html
@@ -22,6 +22,7 @@
             align-items: center;
             text-align: right;
             width: auto;
+            top: -100%;
         }
         nav ul {
              list-style: none;
@@ -85,7 +86,7 @@
         }
         img {
             background-size: cover;
-            height: 300px;
+            height: 150px;
             width: 100%;
             color: #ffffff;
             display: flex;
