--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -1,17 +1,17 @@
-<!DOCTYPE HTML>
+t<!DOCTYPE HTML>
 <html>
 <title> Toko E/X Tujuh </title>
 <link rel="icon" type="image/x-icon" href="extujuhlogo.png">
 <head>
   <style>
-    .marquee {
+    marquee {
       background-color: #777b7e;
       color: #ffffff;
       height: 100px;
       bottom: 50%;
       align-text: middle;
     }
-    .img {
+    img {
       height: 1000px;
       width: auto;
       background-color: #000000;
@@ -21,20 +21,26 @@
     }
     h1 {
       color: #ffffff;
+      position: absolute;
+      right: 40%;
+      top: 10%;
     }
     p {
       color: #ffffff;
+      position: absolute;
+      right: 40%;
+      top: 10%;
     }
   </style>
 </head>
 <body>
-  <marquee class="marquee"><h1>EX TUJUH Toko Tidak Resmi</h1></marquee>
+  <marquee><h1>Selamat Datang Di Toko E/X Tujuh</h1></marquee>
   <hr>
-  <img src="promosi.jpg" class="img">
+  <img src="promosi.jpg">
   <h1> OPEN PO!!!!</h1>
   <p>Mulai dari tanggal 17 sampai 19 april</p>
   <p>Ready tanggal 22 april</p>
-  <p>Order: Whatsapp +62 82322214143 (arraffa)</p>
+  <a href="https://wa.me/+6282322214143"><p>Order: Whatsapp +62 82322214143 (arraffa)</p>
 </body>
 </html>
   
