--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -23,11 +23,11 @@ t<!DOCTYPE HTML>
       color: #ffffff;
       position: absolute;
       right: 30%;
-      top: 60%;
+      top: 50%;
     }
     p {
       color: #ffffff;
-      position: absolute;
+      position: sticky;
       right: 30%;
     }
   </style>
