--- a/store/index.html
+++ b/store/index.html
@@ -34,39 +34,84 @@
             text-align: center;
             margin-top: 20px;
         }
+        footer {
+            background-color: #e6a823;
+            padding: 20px;
+            text-align: left;
+            font-size: 14px;
+            color: #ffffff;
+        }
+        .footer-content {
+            display: flex;
+            justify-content: space-between;
+            flex-wrap: wrap;
+            max-width: 1200px;
+            margin: auto;
+        }
+        .footer-section {
+            flex: 1;
+            padding: 10px;
+            min-width: 200px;
+        }
+        .footer-section h4 {
+            margin-bottom: 10px;
+        }
+        .footer-section p {
+            margin: 5px 0;
+        }
     </style>
 </head>
 <body>
     <div class="card">
-        <img src="path-to-image/common_rank.png" alt="Common Rank">
+        <img src="1.png" alt="Common Rank">
         <h2>Common Rank</h2>
         <p>Gratis</p>
     </div>
     <div class="card">
-        <img src="path-to-image/rare_rank.png" alt="Rare Rank">
+        <img src="2.png" alt="Rare Rank">
         <h2>Rare Rank</h2>
         <p>Rp 15k / $0.99</p>
     </div>
     <div class="card">
-        <img src="path-to-image/super_rare_rank.png" alt="Super Rare Rank">
+        <img src="3.png" alt="Super Rare Rank">
         <h2>Super Rare Rank</h2>
         <p>Rp 50k / $3.10</p>
     </div>
     <div class="card">
-        <img src="path-to-image/super_super_rare_rank.png" alt="Super Super Rare Rank">
+        <img src="4.png" alt="Super Super Rare Rank">
         <h2>Super Super Rare Rank</h2>
         <p>Rp 75k / $4.65</p>
     </div>
     <div class="card">
-        <img src="path-to-image/super_super_rare_plus_rank.png" alt="Super Super Rare+ Rank">
+        <img src="5.png" alt="Super Super Rare+ Rank">
         <h2>Super Super Rare+ Rank</h2>
         <p>Rp 150k / $9.22</p>
     </div>
     <div class="card">
-        <img src="path-to-image/super_super_rare_plus_plus_rank.png" alt="Super Super Rare++ Rank">
+        <img src="6.png" alt="Super Super Rare++ Rank">
         <h2>Super Super Rare++ Rank</h2>
         <p>Rp 215k / $13.22</p>
     </div>
     <div class="coming-soon">[COMING SOON]</div>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section">    
+                <p>&copy; Four Network ID</p>
+                <p>Luckyblock Theme Server</p>
+            </div>
+            <div class="footer-section">
+                <h4>Contact</h4>          
+                <p>Email: support@four.my.id</p>      
+                <p>Discord: antophd</p>       
+                <a href="https://dc.gg/fournetwork" class="a"><p>Four Network discord server</p></a>
+            </div>
+            <div class="footer-section">           
+                <h4>Follow us</h4>     
+                <p>TikTok</p>  
+                <a href="https://tiktok.com/@antop.hd" class="a"><p>@antop.hd</p></a> 
+                <a href="https://tiktok.com/@fournetworkid" class="a"><p>@fournetworkid</p></a>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
