--- a/store/index.html
+++ b/store/index.html
@@ -40,6 +40,7 @@
             text-align: left;
             font-size: 14px;
             color: #ffffff;
+            width: auto;
         }
         .footer-content {
             display: flex;
