--- a/store/index.html
+++ b/store/index.html
@@ -60,6 +60,11 @@
         .footer-section p {
             margin: 5px 0;
         }
+        .content {
+            background-color: #ff9800;
+            padding: 20px;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
@@ -94,6 +99,14 @@
         <p>Rp 215k / $13.22</p>
     </div>
     <div class="coming-soon">[COMING SOON]</div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-section">    
