--- a/store/index.html
+++ b/store/index.html
@@ -6,12 +6,8 @@
     <title>Peringkat</title>
     <style>
         body {
-            font-family: Arial, sans-serif;
-            background-color: orange;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            padding: 20px;
+            background-color: #ff9800;
+            margin: 0;
         }
         .card {
             background-color: #fff;
@@ -21,6 +17,7 @@
             text-align: center;
             width: 150px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+            font-family: Arial, sans-serif;
         }
         .card img {
             width: 80px; /* Ganti dengan ukuran gambar yang sesuai */
