--- a/store/index.html
+++ b/store/index.html
@@ -10,6 +10,8 @@
             margin: 0;
         }
         .card {
+            display: flex;
+            justify-content: center;
             background-color: #fff;
             border-radius: 10px;
             padding: 20px;
