--- a/store/index.html
+++ b/store/index.html
@@ -10,8 +10,6 @@
             margin: 0;
         }
         .card {
-            display: flex;
-            justify-content: center;
             background-color: #fff;
             border-radius: 10px;
             padding: 20px;
@@ -19,7 +17,6 @@
             text-align: center;
             width: 150px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
-            font-family: Arial, sans-serif;
         }
         .card img {
             width: 80px; /* Ganti dengan ukuran gambar yang sesuai */
@@ -64,38 +61,56 @@
             padding: 20px;
             text-align: center;
         }
+        .card-align {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            padding: 20px;
     </style>
 </head>
 <body>
     <div class="card">
-        <img src="1.png" alt="Common Rank">
-        <h2>Common Rank</h2>
-        <p>Gratis</p>
+        <div class="card-align">
+            <img src="1.png" alt="Common Rank">
+            <h2>Common Rank</h2>
+            <p>Gratis</p>
+        </div
     </div>
     <div class="card">
-        <img src="2.png" alt="Rare Rank">
-        <h2>Rare Rank</h2>
-        <p>Rp 15k / $0.99</p>
+        <div class="card-align">
+            <img src="2.png" alt="Rare Rank">
+            <h2>Rare Rank</h2>
+            <p>Rp 15k / $0.99</p>
+        </div>
     </div>
     <div class="card">
-        <img src="3.png" alt="Super Rare Rank">
-        <h2>Super Rare Rank</h2>
-        <p>Rp 50k / $3.10</p>
+        <div class="card-align">
+            <img src="3.png" alt="Super Rare Rank">
+            <h2>Super Rare Rank</h2>
+            <p>Rp 50k / $3.10</p>
+        </div>
     </div>
     <div class="card">
-        <img src="4.png" alt="Super Super Rare Rank">
-        <h2>Super Super Rare Rank</h2>
-        <p>Rp 75k / $4.65</p>
+        <div class="card-align">
+            <img src="4.png" alt="Super Super Rare Rank">
+            <h2>Super Super Rare Rank</h2>
+            <p>Rp 75k / $4.65</p>
+        </div>
     </div>
     <div class="card">
-        <img src="5.png" alt="Super Super Rare+ Rank">
-        <h2>Super Super Rare+ Rank</h2>
-        <p>Rp 150k / $9.22</p>
+        <div class="card-align">
+            <img src="5.png" alt="Super Super Rare+ Rank">
+            <h2>Super Super Rare+ Rank</h2>
+            <p>Rp 150k / $9.22</p>
+        </div>
     </div>
     <div class="card">
-        <img src="6.png" alt="Super Super Rare++ Rank">
-        <h2>Super Super Rare++ Rank</h2>
-        <p>Rp 215k / $13.22</p>
+        <div class="card-align">
+            <img src="6.png" alt="Super Super Rare++ Rank">
+            <h2>Super Super Rare++ Rank</h2>
+            <p>Rp 215k / $13.22</p>
+        </div>
     </div>
     <div class="coming-soon">[COMING SOON]</div>
     <div class="content">
