--- a/store/index.html
+++ b/store/index.html
@@ -75,7 +75,7 @@
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
             <p>Gratis</p>
-        </div
+        </div>
     </div>
     <div class="card">
         <div class="card-align">
