--- a/store/index.html
+++ b/store/index.html
@@ -102,11 +102,11 @@
             <p>Rp 215k / $13.22</p>
         </div>
     </div>
-    <div class="coming-soon">[COMING SOON]</div>
     <div class="content">
     </div>
     <div class="content">
     </div>
+    <div class="coming-soon"><strong>[COMING SOON]</strong></div>
     <div class="content">
     </div>
     <div class="content">
