--- a/store/index.html
+++ b/store/index.html
@@ -67,6 +67,10 @@
             flex-wrap: wrap;
             justify-content: center;
             padding: 20px;
+        }
+        a {
+            color: #ffffff;
+        {
     </style>
 </head>
 <body>
