--- a/store/index.html
+++ b/store/index.html
@@ -71,9 +71,31 @@
         a {
             color: #ffffff;
         {
-    </style>
+        .banner {
+            background-image: url('./home/banner.png');
+            background-color: #ff9800;
+            background-size: cover;
+            height: 370px;
+            color: white;
+            display: flex;
+            align-items: center;
+            text-align: center;
+            position: relative;
+            width: auto;
+        }
+        .header-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 2em;
+            color: #ffffff;
+        }
 </head>
 <body>
+    <div class="banner">
+        <div class="header-text"><h1> Store </h1></div>
+    </div>
     <div class="card-align">
         <div class="card">
             <img src="1.png" alt="Common Rank">
