--- a/store/index.html
+++ b/store/index.html
@@ -72,7 +72,7 @@
             color: #ffffff;
         {
         .banner {
-            background-image: url('./home/banner.png');
+            background-image: url('banner.png');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
