--- a/store/index.html
+++ b/store/index.html
@@ -29,6 +29,7 @@
             width: 100%;
             text-align: center;
             margin-top: 20px;
+            font-family: Arial Black;
         }
         footer {
             background-color: #e6a823;
@@ -72,7 +73,7 @@
             color: #ffffff;
         {
         .banner {
-            background-image: url('banner.png');
+            background-image: url('banner.jpg');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
