--- a/store/index.html
+++ b/store/index.html
@@ -73,7 +73,7 @@
             color: #ffffff;
         {
         .banner {
-            background-image: url('banner.jpg');
+            background-image: url('banner.png');
             background-color: #ff9800;
             background-size: cover;
             height: 370px;
