--- a/store/index.html
+++ b/store/index.html
@@ -96,8 +96,10 @@
 </head>
 <body>
     <div class="banner">
-        <div class="header-text"><h1> Store </h1></div>
+        <div class="header-text"><h1> Four Network ID </h1></div>
+        <p class="header-p"> Luckyblock theme minecraft server </p>
     </div>
+    <hr>
 
     <div class="card-align">
         <div class="card">
