--- a/store/index.html
+++ b/store/index.html
@@ -92,9 +92,18 @@
             font-size: 2em;
             color: #ffffff;
         }
+        .header {
+            color: #ffffff;
+            size: 1rem;
+        }
      </style>
 </head>
 <body>
+    <header>
+        <div class="header">
+            <p>This is a header</p>
+        </div>
+    </header>
     <div class="banner">
         <div class="header-text"><h1> Four Network ID </h1></div>
         <p class="header-p"> Luckyblock theme minecraft server </p>
