--- a/store/index.html
+++ b/store/index.html
@@ -95,6 +95,7 @@
         .header {
             color: #ffffff;
             size: 1rem;
+            backgroud-color: 000f0e;
         }
      </style>
 </head>
