--- a/store/index.html
+++ b/store/index.html
@@ -19,7 +19,7 @@
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
         }
         .card img {
-            width: 80px; /* Ganti dengan ukuran gambar yang sesuai */
+            width: 80px; 
             height: auto;
         }
         .coming-soon {
@@ -71,7 +71,7 @@
         }
         a {
             color: #ffffff;
-        {
+        }
         .banner {
             background-image: url('banner.png');
             background-color: #ff9800;
@@ -94,8 +94,7 @@
         }
         .header {
             color: #ffffff;
-            size: 1rem;
-            backgroud-color: 000f0e;
+            background-color: #000f0e; /* Corrected background color code */
         }
     </style>
 </head>
@@ -145,13 +144,7 @@
     </div>
     <div class="content">
     </div>
-    <div class="content">
-    </div>
     <div class="coming-soon"><strong>[COMING SOON]</strong></div>
-    <div class="content">
-    </div>
-    <div class="content">
-    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-section">    
