--- a/store/index.html
+++ b/store/index.html
@@ -94,7 +94,7 @@
         }
         .header {
             color: #ffffff;
-            background-color: #000f0e; /* Corrected background color code */
+            background-color: #000f0e;
         }
     </style>
 </head>
@@ -105,8 +105,7 @@
         </header>
     </div>
     <div class="banner">
-        <div class="header-text"><h1> Four Network ID </h1></div>
-        <p class="header-p"> Luckyblock theme minecraft server </p>
+        <div class="header-text"><h1> STORE </h1></div>
     </div>
     <hr>
 
