--- a/store/index.html
+++ b/store/index.html
@@ -64,6 +64,7 @@
             text-align: center;
         }
         .card-align {
+            font-family: Arial, sans-serif;
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
