--- a/store/index.html
+++ b/store/index.html
@@ -39,6 +39,7 @@
             color: #ffffff;
             width: auto;
             font-family: sans-serif;
+            font-size: 75%;
         }
         .footer-content {
             display: flex;
