--- a/store/index.html
+++ b/store/index.html
@@ -69,6 +69,7 @@
             flex-wrap: wrap;
             justify-content: center;
             padding: 20px;
+            font-size: 75%;
         }
         a {
             color: #ffffff;
@@ -138,9 +139,9 @@
             <p>Rp 215k / $13.22</p>
         </div>
     </div>
-    <div class="content">
-    </div>
     <div class="coming-soon"><strong>[COMING SOON]</strong></div>
+    </div>
+    <div class="content">
     <footer>
         <div class="footer-content">
             <div class="footer-section">    
