--- a/store/index.html
+++ b/store/index.html
@@ -69,6 +69,7 @@
             flex-wrap: wrap;
             justify-content: center;
             padding: 20px;
+            text-size: 80%
         }
         a {
             color: #ffffff;
