--- a/store/index.html
+++ b/store/index.html
@@ -69,7 +69,7 @@
             flex-wrap: wrap;
             justify-content: center;
             padding: 20px;
-            text-size: 80%
+            text-size: 60%
         }
         a {
             color: #ffffff;
@@ -114,7 +114,7 @@
         <div class="card">
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
-            <p>Gratis</p>
+            <p>Free</p>
         </div>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
