--- a/store/index.html
+++ b/store/index.html
@@ -69,7 +69,7 @@
             flex-wrap: wrap;
             justify-content: center;
             padding: 20px;
-            text-size: 20%
+            text-size: 60%;
         }
         a {
             color: #ffffff;
