--- a/store/index.html
+++ b/store/index.html
@@ -68,8 +68,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            padding: 20px;
-            text-size: 60%;
+            padding: 20px
         }
         a {
             color: #ffffff;
@@ -101,6 +100,9 @@
         h2 {
             font-size: 120%;
         }
+        .p {
+            font-size: 20%
+        }
     </style>
 </head>
 <body>
@@ -114,32 +116,32 @@
         <div class="card">
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
-            <p>Free</p>
+            <p class="p">Free</p>
         </div>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
             <h2>Rare Rank</h2>
-            <p>Rp 15k / $0.99</p>
+            <p class="p">Rp 15k / $0.99</p>
         </div>
         <div class="card">
             <img src="3.png" alt="Super Rare Rank">
             <h2>Super Rare Rank</h2>
-            <p>Rp 50k / $3.10</p>
+            <p class="p">Rp 50k / $3.10</p>
         </div>
         <div class="card">
             <img src="4.png" alt="Super Super Rare Rank">
             <h2>Super Super Rare Rank</h2>
-            <p>Rp 75k / $4.65</p>
+            <p class="p">Rp 75k / $4.65</p>
         </div>
         <div class="card">
             <img src="5.png" alt="Super Super Rare+ Rank">
             <h2>Super Super Rare+ Rank</h2>
-            <p>Rp 150k / $9.22</p>
+            <p class="p">Rp 150k / $9.22</p>
         </div>
         <div class="card">
             <img src="6.png" alt="Super Super Rare++ Rank">
             <h2>Super Super Rare++ Rank</h2>
-            <p>Rp 215k / $13.22</p>
+            <p class="p">Rp 215k / $13.22</p>
         </div>
     </div>
     <div class="coming-soon"><strong>[COMING SOON]</strong></div>
