--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -32,11 +32,17 @@ t<!DOCTYPE HTML>
 <body>
   <marquee><h1>Selamat Datang Di Toko E/X Tujuh</h1></marquee>
   <hr>
-  <img src="promosi.jpg">
-  <h1> OPEN PO!!!!</h1>
-  <p>Mulai dari tanggal 17 sampai 19 april</p>
-  <p>Ready tanggal 22 april</p>
-  <a href="https://wa.me/+6282322214143"><p>Order: Whatsapp +62 82322214143 (arraffa)</p>
+  <ul>
+    <li>
+      <img src="promosi.jpg">
+    </li>
+    <li>
+      <h1> OPEN PO!!!!</h1>
+      <p>Mulai dari tanggal 17 sampai 19 april</p>
+      <p>Ready tanggal 22 april</p>
+      <a href="https://wa.me/+6282322214143"><p>Order: Whatsapp +62 82322214143 (arraffa)</p></a>
+    </li>
+  </ul>
 </body>
 </html>
   
