--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -27,22 +27,32 @@ t<!DOCTYPE HTML>
     p {
       color: #ffffff;
     }
+    .p {
+      position: absolute;
+      right: 30%;
+      top: 60%;
+    }
+    .p-1 {
+      position: absolute;
+      right: 30%;
+      top: 70%;
+    }
+    .a {
+      position: absolute;
+      right: 30%;
+      top: 80%;
+    }
   </style>
 </head>
 <body>
   <marquee><h1>Selamat Datang Di Toko E/X Tujuh</h1></marquee>
   <hr>
   <ul>
-    <li>
-      <img src="promosi.jpg">
-    </li>
-    <li>
-      <h1> OPEN PO!!!!</h1>
-      <p>Mulai dari tanggal 17 sampai 19 april</p>
-      <p>Ready tanggal 22 april</p>
-      <a href="https://wa.me/+6282322214143"><p>Order: Whatsapp +62 82322214143 (arraffa)</p></a>
-    </li>
-  </ul>
+  <img src="promosi.jpg">
+  <h1> OPEN PO!!!!</h1>
+  <p class="p">Mulai dari tanggal 17 sampai 19 april</p>
+  <p class="p-1">Ready tanggal 22 april</p>
+  <a href="https://wa.me/+6282322214143" class="a"><p>Order: Whatsapp +62 82322214143 (arraffa)</p></a>
 </body>
 </html>
   
