--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -8,7 +8,7 @@ t<!DOCTYPE HTML>
       background-color: #777b7e;
       color: #ffffff;
       height: 100px;
-      bottom: 50%;
+      font-size: 150%;
     }
     img {
       height: 1000px;
@@ -45,7 +45,7 @@ t<!DOCTYPE HTML>
   </style>
 </head>
 <body>
-  <marquee><h1>Selamat Datang Di Toko E/X Tujuh</h1></marquee>
+  <marquee>Selamat Datang Di Toko E/X Tujuh</marquee>
   <hr>
   <ul>
   <img src="promosi.jpg">
