--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -8,7 +8,7 @@ t<!DOCTYPE HTML>
       background-color: #777b7e;
       color: #ffffff;
       height: 100px;
-      font-size: 150%;
+      font-size: 200%;
     }
     img {
       height: 1000px;
@@ -31,16 +31,19 @@ t<!DOCTYPE HTML>
       position: absolute;
       right: 30%;
       top: 60%;
+      text-align: left;
     }
     .p-1 {
       position: absolute;
       right: 30%;
       top: 70%;
+      text-align: left;
     }
     .a {
       position: absolute;
       right: 30%;
       top: 80%;
+      text-align: left;
     }
   </style>
 </head>
