--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -21,7 +21,7 @@ t<!DOCTYPE HTML>
     h1 {
       color: #ffffff;
       position: absolute;
-      right: 30%;
+      left: 70%;
       top: 50%;
     }
     p {
