--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -1,8 +1,9 @@
 t<!DOCTYPE HTML>
 <html>
-<title> Toko E/X Tujuh </title>
-<link rel="icon" type="image/x-icon" href="extujuhlogo.png">
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title> Toko E/X Tujuh </title>
+  <link rel="icon" type="image/x-icon" href="extujuhlogo.png">
   <style>
     marquee {
       background-color: #777b7e;
@@ -47,12 +48,15 @@ t<!DOCTYPE HTML>
 <body>
   <marquee>Selamat Datang Di Toko E/X Tujuh</marquee>
   <hr>
-  <ul>
-  <img src="promosi.jpg">
-  <h1> OPEN PO!!!!</h1>
-  <p class="p">Mulai dari tanggal 17 sampai 19 april</p>
-  <p class="p-1">Ready tanggal 22 april</p>
-  <a href="https://wa.me/+6282322214143" class="a"><p>Order: Whatsapp +62 82322214143 (arraffa)</p></a>
+  <div>
+    <img src="promosi.jpg">
+  </div>
+  <div>
+    <h1> OPEN PO!!!!</h1>
+    <p class="p">Mulai dari tanggal 17 sampai 19 april</p>
+    <p class="p-1">Ready tanggal 22 april</p>
+    <a href="https://wa.me/+6282322214143" class="a"><p>Order: Whatsapp +62 82322214143 (arraffa)</p></a>
+  </div>
 </body>
 </html>
   
