--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -43,13 +43,18 @@ t<!DOCTYPE HTML>
       left: 60%;
       top: 63%;
     }
+    .text {
+      width: 300px;
+      height: 1000px;
+      background-image: url('promosi.jpg')
   </style>
 </head>
 <body>
   <marquee>Selamat Datang Di Toko E/X Tujuh</marquee>
   <hr>
+  <div class="text">
+  </div>
   <div>
-    <img src="promosi.jpg">
     <h1> OPEN PO!!!!</h1>
     <p class="p">Mulai dari tanggal 17 sampai 19 april</p>
     <p class="p-1">Ready tanggal 22 april</p>
