--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -44,8 +44,8 @@ t<!DOCTYPE HTML>
       top: 63%;
     }
     .text {
-      width: 70px;
-      height: 100px;
+      width: auto;
+      height: 1000px;
       background-image: url('promosi.jpg')
   </style>
 </head>
