--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -44,9 +44,8 @@ t<!DOCTYPE HTML>
       top: 63%;
     }
     .text {
-      width: auto;
-      height: 1000px;
-      background-image: url('promosi.jpg')
+      width: 700px;
+
   </style>
 </head>
 <body>
@@ -55,6 +54,7 @@ t<!DOCTYPE HTML>
   <div class="text">
   </div>
   <div>
+    <img src="promosi.jpg">
     <h1> OPEN PO!!!!</h1>
     <p class="p">Mulai dari tanggal 17 sampai 19 april</p>
     <p class="p-1">Ready tanggal 22 april</p>
