--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -10,6 +10,7 @@ t<!DOCTYPE HTML>
       color: #ffffff;
       height: 100px;
       font-size: 400%;
+      width: auto;
     }
     img {
       height: 1000px;
@@ -29,17 +30,14 @@ t<!DOCTYPE HTML>
       color: #ffffff;
     }
     .p {
-      position: absolute;
       left: 60%;
       top: 57%;
     }
     .p-1 {
-      position: absolute;
       left: 60%;
       top: 60%;
     }
     .a {
-      position: absolute;
       left: 60%;
       top: 63%;
     }
