--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -23,22 +23,25 @@ t<!DOCTYPE HTML>
     h1 {
       color: #ffffff;
       position: absolute;
-      left: 60%;
+      left: 70%;
       top: 50%;
     }
     p {
       color: #ffffff;
     }
     .p {
-      left: 60%;
+      position: absolute;
+      left: 70%;
       top: 57%;
     }
     .p-1 {
-      left: 60%;
+      position: absolute;
+      left: 70%;
       top: 60%;
     }
     .a {
-      left: 60%;
+      position: absolute;
+      left: 70%;
       top: 63%;
     }
     .text {
