--- a/store/sevenex/index.html
+++ b/store/sevenex/index.html
@@ -9,7 +9,7 @@ t<!DOCTYPE HTML>
       color: #ffffff;
       height: 100px;
       font-size: 400%;
-      width: auto;
+      width: 1000px;
     }
     img {
       height: 1000px;
