--- a/store/index.html
+++ b/store/index.html
@@ -1,4 +1,4 @@
-\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
@@ -101,12 +101,11 @@
             font-size: 120%;
         }
         .p {
-            font-size: 70%
+            font-size: 80%
         }
     </style>
 </head>
 <body>
-    </div>
     <div class="banner">
         <div class="header-text"><h1> STORE </h1></div>
     </div>
