--- a/test/index.html
+++ b/test/index.html
@@ -48,7 +48,8 @@
         
         // Display a success message
         echo "<p>Network ID saved! <a href='index.html'>Go back</a></p>";
-    } else {
+    } 
+    else {
         // Show form if it's not a POST request
         echo '<form action="" method="post">
                 <label for="networkID">Enter Network ID:</label>
