--- a/store/index.html
+++ b/store/index.html
@@ -103,6 +103,10 @@
         .p {
             font-size: 80%
         }
+        .align {
+            color: #ffffff;
+            background-color: #ffffff;
+        }
     </style>
 </head>
 <body>
@@ -116,36 +120,36 @@
             <img src="1.png" alt="Common Rank">
             <h2>Common Rank</h2>
             <p class="p">Free</p>
-            <div></div>
+            <div calss="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="2.png" alt="Rare Rank">
             <h2>Rare Rank</h2>
             <p class="p">Rp 15k / $0.99</p>
-            <div></div>
-            <div></div>
+            <div calss="align"></div>
+            <div calss="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="3.png" alt="Super Rare Rank">
             <h2>Super Rare Rank</h2>
             <p class="p">Rp 50k / $3.10</p>
-            <div></div>
+            <div calss="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="4.png" alt="Super Super Rare Rank">
             <h2>Super Super Rare Rank</h2>
             <p class="p">Rp 75k / $4.65</p>
-            <div></div>
+            <div calss="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
             <img src="5.png" alt="Super Super Rare+ Rank">
             <h2>Super Super Rare+ Rank</h2>
             <p class="p">Rp 150k / $9.22</p>
-            <div></div>
+            <div calss="align"></div>
             <h4>ORDER</h4>
         </div>
         <div class="card">
