--- a/store/index.html
+++ b/store/index.html
@@ -106,6 +106,7 @@
         .align {
             color: #ffffff;
             background-color: #ffffff;
+            font-size: 400%;
         }
     </style>
 </head>
