--- a/store/index.html
+++ b/store/index.html
@@ -155,14 +155,8 @@
             <h2>Super Super Rare+ Rank</h2>
             <p class="p">Rp 150k / $9.22</p>
             <div calss="align">
-.
-.
-.
-.
-.
-.
-.
-.
+            </div>
+            <div calss="align">
             </div>
             <h4>ORDER</h4>
         </div>
