--- a/store/index.html
+++ b/store/index.html
@@ -107,6 +107,7 @@
             color: #ffffff;
             background-color: #ffffff;
             font-size: 400%;
+            padding: 50px;
         }
     </style>
 </head>
