--- a/store/index.html
+++ b/store/index.html
@@ -68,7 +68,7 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
-            padding: 20px
+            padding: 20px;
         }
         a {
             color: #ffffff;
