--- a/store/index.html
+++ b/store/index.html
@@ -107,7 +107,7 @@
             color: #ffffff;
             background-color: #ffffff;
             font-size: 400%;
-            height: 20px
+            height: 20px;
         }
     </style>
 </head>
