--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
 <!DOCTYPE HTML>
-<a href="home">This is a test web so nothing here</a>
+<script type="text/javascript">
+        setTimeout(function() {
+            window.location.href = "https://www.four.my.id/home";
+        }, 0);
+    </script>
