--- a/home/index.html
+++ b/home/index.html
@@ -22,7 +22,6 @@
             align-items: center;
             text-align: right;
             width: auto;
-            top: -100%;
         }
         nav ul {
              list-style: none;
@@ -126,6 +125,9 @@
         a {
             color: white;
         }
+        .nav {
+            margin-bottom: -1px;
+        }
     </style>
 </head>
 <body>
@@ -133,13 +135,13 @@
         <div class="text-center mt-4">
             <aside>
                 <ul class="nav justify-content-center">
-                    <li class="nav-item">
+                    <li class="nav">
                         <a href="https://four.my.id/home" class="nav-link"><p>Home</p></a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav">
                         <a href="https://four.my.id/store" class="nav-link"><p>Store</p></a>
                     </li>
-                        <li class="nav-item">
+                        <li class="nav">
                         <a href="https://four.my.id/perks" class="nav-link"><p>Perks</p></a>
                     </li>
                 </ul>
