--- a/home/index.html
+++ b/home/index.html
@@ -29,7 +29,7 @@
         }
 
         nav ul li {
-            margin-left: 20px;
+            height: 25px;
         }
         h1 {
             font-size: 3rem;
@@ -125,9 +125,6 @@
         a {
             color: white;
         }
-        .nav {
-            top: 50%;
-        }
     </style>
 </head>
 <body>
@@ -135,13 +132,13 @@
         <div class="text-center mt-4">
             <aside>
                 <ul class="nav justify-content-center">
-                    <li class="nav">
+                    <li>
                         <a href="https://four.my.id/home" class="nav-link"><p>Home</p></a>
                     </li>
-                    <li class="nav">
+                    <li>
                         <a href="https://four.my.id/store" class="nav-link"><p>Store</p></a>
                     </li>
-                        <li class="nav">
+                        <li>
                         <a href="https://four.my.id/perks" class="nav-link"><p>Perks</p></a>
                     </li>
                 </ul>
