--- a/home/index.html
+++ b/home/index.html
@@ -23,6 +23,21 @@
         .header.hidden {
             transform: translateY(-100%);
         }
+        .header-text {
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            font-size: 2em;
+            color: #ffffff;
+        }
+        .header-p {
+            position: absolute;
+            top: 57%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            color: #ffffff;
+        }
         h1 {
             font-size: 3rem;
             color: #ffffff;
