--- a/home/index.html
+++ b/home/index.html
@@ -160,6 +160,21 @@
             lastScrollTop = scrollTop;
         });
     </script>
+    <div class="content">
+        <a href="https://dc.gg/fournetwork"><button class="btn btn-primary">Discord</button></a>
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
+    <div class="content">
+    </div>
     <footer>
         <div class="footer-content">
             <div class="footer-section">
